Update 'mewfhew97-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe:3be778b12618411bc9fce1e4210fd97da0db23d5@sha256:05e9852b69eb1e14acd542c4f2243340bb1f21f7231e0eefe5ae455f55556f3b

--- a/components/mewfhew97-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/mewfhew97-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: mewfhew97-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:3be778b12618411bc9fce1e4210fd97da0db23d5@sha256:05e9852b69eb1e14acd542c4f2243340bb1f21f7231e0eefe5ae455f55556f3b
+          name: container-image
